# Copyright (c) 2023 Zack Elia
# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

executable("wled-matter-bridge") {
  sources = [
    "${chip_root}/examples/bridge-app/linux/bridged-actions-stub.cpp",
    "Device.cpp",
    "include/Device.h",
    "include/main.h",
    "main.cpp",
    "mdns.cpp",
    "kvs.cpp",
  ]

  deps = [
    "//zap",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
    "${chip_root}/third_party/jsoncpp",
    "//third_party/curl",
    "//third_party/mdns",
  ]

  libs = [
    "z"
  ]

  cflags = [
    "-Wconversion",
    # Should only be set to 1 for development
    "-DABORT_ON_UNHANDLED_ATTRIBUTE=0",
  ]

  ldflags = [
    "-fuse-ld=lld",
  ]

  include_dirs = [
    "include",
  ]

  output_dir = root_out_dir
}

group("linux") {
  deps = [ ":wled-matter-bridge" ]
}

group("default") {
  deps = [ ":linux" ]
}
